--- a/client/ui/index.html
+++ b/client/ui/index.html
@@ -177,7 +177,7 @@
                     </div>
                     <div class="editor-pair-col">
                         <label class="editor-label">server address</label>
-                        <input class="input editor-input editor-register-server-address" type="text" value="http://127.0.0.1:5000">
+                        <input class="input editor-input editor-register-server-address" type="text">
                     </div>
                 </div>
                 <div class="editor-controls">
@@ -203,7 +203,7 @@
                     <div class="editor-pair-col">
                         <label class="editor-label">server address</label>
                         <input class="input editor-input editor-login-server-address editor-show-password" 
-                        type="text" value="http://127.0.0.1:5000">
+                        type="text">
                     </div>
                 </div>
                 <div class="editor-controls">
